plugins {
  id 'java-library'
  id 'idea'
  id 'antlr'
  id 'maven-publish'
  id 'signing'
}


//noinspection GrDeprecatedAPIUsage
project.buildDir = file('.build')
layout.buildDirectory = '.build'


description = 'ANTLR4 Runtime Extensions'
group = 'de.sayayi.lib'
version = libs.versions.antlr4.runtime.ext.get()


configurations {
  api {
    // get rid of antlr4 configuration dependency, which will include antlr4.jar
    extendsFrom = extendsFrom.findAll { it != configurations.antlr }
  }
}


java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}


test {
  useJUnitPlatform()

  javaLauncher = javaToolchains.launcherFor {
    languageVersion = JavaLanguageVersion.of(21)
  }
}


repositories {
  mavenCentral()
}


dependencies {
  // java
  implementation libs.antlr4.runtime

  compileOnlyApi libs.jetbrains.annotations

  // test
  testAnnotationProcessor libs.lombok

  testCompileOnly libs.lombok
  testCompileOnly libs.jetbrains.annotations

  testImplementation libs.junit.jupiter.api
  testRuntimeOnly libs.junit.jupiter.engine
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  antlr libs.antlr4
}


compileTestJava.dependsOn generateTestGrammarSource
jar.dependsOn test


def resolvedAntlr4RuntimeVersion = configurations
    .compileClasspath
    .resolvedConfiguration
    .resolvedArtifacts
    .find { it.name == 'antlr4-runtime' }
    .moduleVersion.id.version

def resolvedJetbrainsAnnotationsVersion = configurations
    .compileClasspath
    .resolvedConfiguration
    .resolvedArtifacts
    .find { it.name == 'annotations' }
    .moduleVersion.id.version


javadoc {
  title = "ANTLR4 Runtime Extensions ${version}"

  (options as StandardJavadocDocletOptions).with {
    linksOffline "https://javadoc.io/doc/org.jetbrains/annotations/${resolvedJetbrainsAnnotationsVersion}/",
                 'gradle/javadocs/jetbrains-annotations'
    linksOffline "https://javadoc.io/doc/org.antlr/antlr4-runtime/${resolvedAntlr4RuntimeVersion}/",
                 'gradle/javadocs/antlr4-runtime'

    encoding 'UTF-8'

    group("ANTLR4 Runtime API", [
        'de.sayayi.lib.antlr4',
        'de.sayayi.lib.antlr4.syntax',
        'de.sayayi.lib.antlr4.walker'
    ])

    noQualifiers 'java.util', 'java.lang'

    addStringOption('Xdoclint:-missing', '-quiet')
    //addStringOption('no-module-directories', '')
  }

  failOnError = false
}


tasks.withType(Jar).configureEach {
  reproducibleFileOrder = true

  manifest {
    attributes(
        'Implementation-Vendor': 'Jeroen Gremmen',
        'Implementation-Vendor-Id': 'de.sayayi',
        'Implementation-Title': project.name,
        'Implementation-Version': project.version,
        'Created-By': System.getProperty('java.version'),
        'Built-Date': new Date().format('yyyy-MM-dd HH:mm:ss')
    )
  }

  metaInf {
    from files('LICENSE')
  }
}


tasks.register('javadocJar', Jar) {
  archiveClassifier.set('javadoc')
  from javadoc
}


tasks.register('sourcesJar', Jar) {
  dependsOn classes

  archiveClassifier.set('sources')
  from sourceSets.main.allSource
}


publishing {
  publications {
    create('maven', MavenPublication) {
      from components.java

      artifact javadocJar
      artifact sourcesJar

      pom {
        name = 'ANTLR4 Runtime Extensions'
        description = 'ANTLR4 Runtime Extensions'
        url = 'https://github.com/jgremmen/antlr4-runtime-ext'
        inceptionYear = '2022'

        licenses {
          license {
            name = 'Apache License, Version 2.0'
            url = 'https://www.apache.org/licenses/LICENSE-2.0'
            distribution = 'repo'
          }
        }

        developers {
          developer {
            id = 'jgremmen'
            name = 'Jeroen Gremmen'
            email = 'jeroen.gremmen@sayayi.de'
          }
        }

        scm {
          connection = 'scm:git:git://github.com/jgremmen/antlr4-runtime-ext.git'
          developerConnection = 'scm:git:git://github.com/jgremmen/antlr4-runtime-ext.git'
          url = 'https://github.com/jgremmen/antlr4-runtime-ext'
        }
      }
    }
  }

  def snapshot = version.toString().endsWith('-SNAPSHOT')
  def mavenTempUrl = layout.buildDirectory.dir(snapshot ? 'repository/snapshot' : 'repository/release')

  repositories {
    maven {
      name = 'mavenTemp'
      url = mavenTempUrl
    }
    maven {
      // maven central
      url = snapshot
          ? 'https://oss.sonatype.org/content/repositories/snapshots'
          : 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
      credentials {
        username = findProperty('mavenCentral.username')
        password = findProperty('mavenCentral.password')
      }
    }
  }
}


signing {
  sign publishing.publications.maven
}


wrapper {
  distributionType = Wrapper.DistributionType.BIN
}


idea {
  module {
    generatedSourceDirs += generateTestGrammarSource.outputDirectory
  }
}
